traduction et formulaire

--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -1,4 +1,2 @@
-site_title: "My Awesome Site"
-product_list_title: "Product List"
-products: "Products"
-view_detail: "View detail"
+site_title: Home
+products: Products
