--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -1,4 +1,2 @@
-site_title: "Mon Super Site"
-product_list_title: "Liste des Produits"
-products: "Produits"
-view_detail: "Voir le détail"
+site_title: Accueil
+products: Produits
