--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -1,7 +1,2 @@
-site_title: Home
 products: Products
-price: Price
-stock: Stock
-add_to_cart: Add to Cart
-edit: Edit
-create_product: Create Product
+add_to_cart: Add to cart
