--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -1,7 +1,3 @@
 site_title: Accueil
-products: Produits
-price: Prix
-stock: Stock
-add_to_cart: Ajouter au panier
-editor: Modifier
-create_product: Créer un produit
+products: Products
+add_to_cart: ajouter au panier
