--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -1,2 +1,9 @@
 products: Products
 add_to_cart: Add to cart
+search_products: Search products
+no_products_found: No products found.
+site_title: My Shop
+create_product: Create Product
+price: Price
+stock: Stock
+edit: Edit
